--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate": "gqless generate"
   },
   "dependencies": {
+    "@gqless/cli": "^0.0.1-alpha.31",
+    "@gqless/react": "^0.0.1-alpha.28",
+    "gqless": "^0.0.1-alpha.29",
     "next": "9.3.6",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@types/node": "^13.13.4",
+    "@types/react": "^16.9.34"
   }
 }
